--- a/fdt-overlay/sun8i-h3-bh1750-i2c0.dtso.sample
+++ b/fdt-overlay/sun8i-h3-bh1750-i2c0.dtso.sample
@@ -6,13 +6,11 @@
 };
 
 &i2c0 {
-    bh1750: bh1750@23 {
-	compatible = "bh1750";
-	#address-cells = <1>;
-	#size-cells = <0>;
+    light-sensor@23 {
+	compatible = "rohm,bh1750";
+	reg = <0x23>;
 	/* MTreg = 69 by default for bh1750 */
 	mtreg = <0x45>;
-	reg = <0x23>;
 	/* Up to 50% if You need to increase ready-time */
 	//quality-lack = <0>;
 	polling-time = <2>;
